[tool.poetry]
name = "pyproject-toml"
version = "0.1.0"
description = ""
authors = ["Oleg <logardyt@gmail.com>"]
readme = "README.md"
packages = [{include = "pyproject"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
